# resource-monitor

./: CMakeLists.txt  cpu.c  main.c  memory.c  process.c  render.c  sysmon.h  utils.c
include/: render.h  sysmon.h
